# quotapeek

./: .gitignore  README.md  index.html  package-lock.json  package.json  settings.html  vite.config.ts
fixtures/: claude-usage.json  codex-rollout.jsonl  codex-usage.json
scripts/: gen-icon.js  gen-tray-template.js
src/: api.ts  main.ts  render.ts  settings.ts  style.css  types.ts
src-tauri/: Cargo.toml  quotapeek-updater.key.pub  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: claude.rs  codex.rs  commands.rs  credentials.rs  lib.rs  logging.rs  main.rs  models.rs  settings.rs  transcript.rs
