[package]
name = "quotapeek"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

[lib]
name = "quotapeek_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-autostart = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = "0.4"
dirs = "5"

[profile.release]
opt-level = "s"
lto = true
strip = true
