[package]
name = "quotapeek"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

[lib]
name = "quotapeek_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-autostart = "2"
tauri-plugin-window-state = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = "0.4"
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# macOS reads the Claude Code token from the login Keychain (not the file).
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2"

[profile.release]
opt-level = "s"
lto = true
strip = true
